# workable

./: README.md
Adapters/: README.md  processing.h
Adapters/lib/: agregate_by_key.h  as_data_flow.h  concepts.h  dir.h  drop_nullopt.h  filter.h  headers.h  join.h  main  main.cpp  merge_custom.h  open_files.h  operators.h  special.h  split.h  split_expected.h  transform.h  write.h
Adapters/tests/: CMakeLists.txt
ArgParser/labwork4/: CMakeLists.txt  README.md
ArgParser/labwork4/lib/: ArgParser.cpp  ArgParser.h
ArgParser/labwork4/tests/: ArgParser_Test.cpp  CMakeLists.txt
Compilator/: README.md
Compilator/lib/: CMakeLists.txt
Compilator/lib/interpreter/: binaryOperators.cpp  errorManager.h  interpreter.cpp  interpreter.h  scope.cpp  scope.h  stdlib.cpp  value.cpp  value.h
Compilator/lib/lexer/: lexer.cpp  lexer.h  token.cpp  token.h
Compilator/lib/parser/: ASTNode.cpp  ASTNode.h  parser.cpp  parser.h
Compilator/tests/: CMakeLists.txt  function_test.cpp  illegal_ops_test.cpp  types_test.cpp
SeaBattle/labwork5/: CMakeLists.txt  Game.cpp  Game.h  GameField.cpp  GameField.h  Ship.h  main.cpp
TaskScheduler/: CMakeLists.txt  README.md
TaskScheduler/lib/: func_tuple.h  scheduler.h
TaskScheduler/test/: CMakeLists.txt  test.cpp
ca25-circuit-Keyplexex-main/: README.md  cpu_test.v  d_flop.v  memory.v  mips_cpu.v  util.v
ca25-emulator-Keyplexex-main/: CMakeLists.txt  README.md  cache.cpp  cache.hpp  config.hpp  cpu.cpp  cpu.hpp  errors.hpp  io.cpp  io.hpp  main.cpp  memory.cpp  memory.hpp
ca25-optimizations-Keyplexex-main/: README.md  REPORT.md  main.cpp  plot_results.py  pnm_io.h
ca25-optimizations-Keyplexex-main/.github/workflows/: classroom.yml
